sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:18: error: Unmatched closing brace '}' ignored here
}
^